[package]
name = "reshare-cli-client"
version = "0.1.0"
authors = ["ypo6opoc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bytesize = "1.0.1"
comfy-table = "2.1.0"
dialoguer = "0.8.0"
dirs-next = "2.0.0"
reqwest = { version = "0.11.2", features=["blocking", "json"] }
reshare-models = { path = "../reshare-models" }
structopt = "0.3.21"
thiserror = "1.0.24"
