[package]
name = "reshare-cli-client"
version = "0.1.0"
authors = ["ypo6opoc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
comfy-table = "2.1.0"
dialoguer = "0.8.0"
dirs-next = "2.0.0"
structopt = "0.3.21"
thiserror = "1.0.24"
reshare-models = { path = "../reshare-models" }
reqwest = { version = "0.11.2", features = ["blocking", "json", "stream", "multipart"] }
tokio = { version = "1.4", features = ["rt", "fs", "sync"] }
tokio-util = { version = "0.6", features=["codec"] }
futures = "0.3"
bytes = "1.0.1"
pin-project = "1.0.6"
indicatif = "0.15.0"
