[package]
name = "reshare-server"
version = "0.1.0"
authors = ["ypo6opoc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = { version = "1.0", features=["derive"] }
reshare-models = { path = "../reshare-models" }
env_logger = "0.8.3"
actix-multipart = "0.3.0"
sanitize-filename-reader-friendly = "1.1.1"
futures = "0.3.13"
log = "0.4.14"
thiserror = "1.0.24"
futures-core = "0.3.13"
rand = "0.8.3"
chrono = "0.4.19"
once_cell = "1.7.2"

