[package]
name = "reshare-web-client"
version = "0.1.0"
authors = ["ypo6opoc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
wasm-logger = "0.2.0"
yew = "0.17.4"
reshare-models = { path = "../reshare-models" }
indicatif = "0.16.0"
